# michina

./: .gitignore  README.md  exceptions.py  isConsistent.py  michina.py  pyproject.toml  setup.py  test.py
lib/checks/: __init__.py
lib/checks/consistency/: __init__.py  check.py
lib/checks/tone/: __init__.py  check.py
michina/checks/: __init__.py  base_check.py
michina/checks/consistency/: __init__.py  check.py  prompt.py
michina/checks/tone/: __init__.py  check.py  prompt.py
src/michina/: toneCheck.py
