[tool.poetry]
name = "michina"
version = "0.2.0"
description = "Integ test framework for LLMs."
authors = ["bkitano <briankitano@gmail.com>"]
readme = "README.md"
repository = "https://github.com/michina-ai/michina"

[tool.poetry.dependencies]
python = "^3.11"
xmltodict = "^0.13.0"
build = "^0.10.0"
twine = "^4.0.2"
langchain = "^0.0.240"
python-dotenv = "^1.0.0"
openai = "^0.27.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"